# Anisoap-torch

./: .gitignore  CITATION.cff  Cargo.toml  NOTICE  PUSH_GUIDE.md  README.md  profile_baseline.py  pyproject.toml  validate_final.py
anisoap/representations/: ellipsoidal_density_projection.py  radial_basis.py
benchmarks/: results.json
docs/: BENCHMARKS.md
rust/: lib.rs
rust/ellip_expansion/: compute_moments.rs
scripts/: benchmark.py  bootstrap.sh  validate.py
tests/: test_batch_gaussian.py  test_batch_moments.py  test_descriptor_smoke.py
